[package]
name = "acme-rs"
version = "0.1.0"
edition = { workspace = true }

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"


[features]
default = ["acmeRsStd"]
acmeRsStd = []
insecurePebbleRoots = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { workspace = true, features = ["default"] }
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true, features = ["derive", "std"] }
# DONT UPDATE
rcgen = { version = "0.9.3", features = ["x509-parser", "pem", "default"] }
p256 = { workspace = true, features = ["std", "ecdsa"] }
rand = { workspace = true, features = ["default"] }
serde_json = { workspace = true, features = ["default"] }
serde_yaml = { workspace = true }
anyhow = { workspace = true, features = ["default"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
data-encoding = { workspace = true, features = ["default"] }
time = { workspace = true, features = ["std"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
tracing = { workspace = true, features = ["default"] }
