[package]
edition = "2021"
name = "pektin-api"
version = "0.1.0"

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "pektin_api"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"
indexing_slicing = "deny"


[dependencies]
actix-web = "4.0.1"
actix-cors = "0.7.0"
anyhow = { workspace = true }
chrono = "0.4"
data-encoding = "2.3"
env_logger = "0.11.5"
idna = "1.0.3"
lazy_static = "1.4"
log = { version = "0.4", features = ["release_max_level_warn"] }
moka = { version = "0.12.8", features = ["future"] }
mime = "0.3"

p256 = { version = "0.13.2", features = ["pem"] }
parking_lot = "0.12"
rand = "0.8"
ring = "0.17.13"
reqwest = { workspace = true, default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

vaultrs = { workspace = true }
serde_yaml = { workspace = true }


tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = [
    "json",
    "env-filter",
    "chrono",
] }
tracing-opentelemetry = "0.27.0"
opentelemetry = { workspace = true, features = ["trace"] }

tracing-actix-web = { version = "0.7.14", features = ["opentelemetry_0_24"] }

pektin-common = { workspace = true }
mows-common = { workspace = true }


[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"


[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
rpath = false
