[package]
edition = { workspace = true }
name = "pektin-api"
version = "0.1.0"

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "pektin_api"
path = "src/lib.rs"


[dependencies]
actix-web = { workspace = true, features = ["default"] }
actix-cors = { workspace = true }
anyhow = { workspace = true, features = ["default"] }
chrono = { workspace = true, features = ["default"] }
data-encoding = { workspace = true, features = ["default"] }
env_logger = { workspace = true, features = ["default"] }
idna = "1.0.3"
lazy_static = { workspace = true }
moka = { workspace = true, features = ["future"] }
mime = "0.3"

p256 = { workspace = true, features = ["pem", "default"] }
parking_lot = { workspace = true, features = ["default"] }
rand = { workspace = true, features = ["default"] }
ring = "0.17.13"
reqwest = { workspace = true, default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["default"] }
sha2 = { workspace = true, features = ["default"] }
thiserror = { workspace = true, features = ["default"] }
tokio = { workspace = true, features = ["full"] }

vaultrs = { workspace = true, features = ["rustls"] }
serde_yaml = { workspace = true }


tracing = { workspace = true, features = ["default"] }
tracing-subscriber = { workspace = true, features = [
    "json",
    "env-filter",
    "chrono",
] }
tracing-opentelemetry = { workspace = true, features = ["default"] }
opentelemetry = { workspace = true, features = ["trace"] }

tracing-actix-web = { workspace = true, features = ["opentelemetry_0_24"] }

pektin-common = { workspace = true, features = ["default"] }
mows-common-rust = { workspace = true, features = ["default", "vault"] }


[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"
