[package]
name = "pektin-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gen_schema"
path = "src/gen_schema.rs"


[features]
default = []

[dependencies]
base64 = "0.22.1"
deadpool-redis = { version = "0.18.0", features = ["rt_tokio_1", "serde"] }
hex = "0.4"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["default"] }
serde_repr = "0.1.19"
thiserror = { workspace = true }
tracing = { workspace = true }
hickory-proto = { version = "0.24.4", features = [
    "dnssec-ring",
    "serde-config",
] }
url = { workspace = true }


schemars = { workspace = true, features = ["chrono"] }

[lib]
name = "pektin_common"
path = "src/lib.rs"
